--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "truffle-flattener": "1.3.0",
     "truffle-hdwallet-provider": "1.0.4",
     "truffle-hdwallet-provider-privkey": "1.0.3",
-    "web3": "1.0.0-beta.46"
+    "web3": "1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,8 +44,7 @@
   },
   "engines": {
 
-    "node": "8.11.1",
-    "npm": "6.12.0"
+    "node": "8.11.1"
 
   },
   "eslintConfig": {
