--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "blockchain-developer-bootcamp",
+  "name": "pdx",
   "version": "0.1.0",
   "description": "Decentralized Ethereum Token Exchange",
-  "author": "gregory@dappuniversity.com",
+  "author": "enporter09@gmail.com",
   "private": true,
   "dependencies": {
     "apexcharts": "3.6.3",
